--- a/config.env
+++ b/config.env
@@ -10,7 +10,7 @@ AUTO_DELETE_MESSAGE_DURATION = -1
 IS_TEAM_DRIVE = "True"
 TELEGRAM_API =6682330
 TELEGRAM_HASH = "a1c264a07c3d7e1eedc83c746a4a9777"
-BASE_URL_OF_BOT = ""  # Web Link, Required for (Heroku) to avoid sleep or use worker if you don't want to use web (selection)
+BASE_URL_OF_BOT = "https://anjumanikingleech.herokuapp.com"  # Web Link, Required for (Heroku) to avoid sleep or use worker if you don't want to use web (selection)
 # OPTIONAL CONFIG
 DATABASE_URL = ""
 AUTHORIZED_CHATS = "-1001523303763"  # Split by space
